you can now move the progress bar and change the musics' timing, also timers are no longer 'jumping' and breaking the whole player

--- a/css/player.css
+++ b/css/player.css
@@ -71,9 +71,18 @@
   gap: 5px;
 }
 
+.timerContainer{
+  position: relative;
+  width: 29px;
+  height: 20px;
+}
+
 .timer{
   color: grey;
-  transform: translateY(-2px);
+  position: absolute;
+  left: 0px;
+  bottom: 0px;
+
 }
 
 .playerSlider{
